# qed_labyrinth

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.engine  Makefile  README.md  agents.md  docker-compose.prod.yml  docker-compose.yml  dune  dune-project  generate-schemas.sh  package-lock.json  qed.db  qed_labyrinth.opam  test_schemas.ml  world.json
.github/workflows/: deploy.yml
agent-mind-service/: Dockerfile  app.py  generate_proto.sh  requirements.txt
api-server/: dump.rdb  generate-schemas.sh  package-lock.json  package.json  tsconfig.json
api-server/src/: connectionManager.ts  db.ts  index.ts  redisClient.ts
api/src/: config.ts  connectionManager.ts  redisClient.ts
api/src/models/: user.ts
app/src/: App.jsx
bin_eio/: dune  main.ml
chronos/: dune-project
chronos/engine/: dune
chronos/engine/domain/: dune  publisher.ml  publisher.mli  state.ml  state.mli
chronos/engine/infra/: config.ml  config.mli  dune  queue.ml  queue.mli  redis.ml  redis.mli  resp.ml  resp.mli
chronos/engine/schemas_generated/: dune
chronos/test/: dune  test_redis.ml  test_resp.ml
engine/domain/: components.ml  dune  loop.ml  scheduler.ml  state.mli  system.mli
engine/domain/actions/: area_actions.mli  character_actions.ml
engine/domain/components/: unconscious_component.ml
engine/domain/config/: game_balance.ml
engine/domain/models/: character.ml  character.mli  exit.ml  lore_card.ml  seeding.ml  seeding.mli  user.ml  user.mli
engine/domain/systems/: character_disconnection_system.ml  character_stat_system.ml  character_unloading_system.ml  equipment_update_system.ml  recovery_system.ml
engine/infra/: dune
engine/schemas_generated/: dune
engine_eio/: dune
engine_eio/schemas_generated/: dune
frontend/: bun.lockb  index.html  package.json  tailwind.config.mjs  vite.config.js
frontend/src/: App.jsx  index.jsx
game-client/: index.html  package-lock.json  package.json  tailwind.config.js
game-client/src/: App.jsx  App.tsx  index.css
game-client_old/src/: App.jsx
labyrinth/: dune-project  qed_labyrinth.opam
labyrinth/test/: dune
lib/: dune
lib/api/: dune  protocol.ml  types.ml  types.mli
lib/auth/: auth.ml  dune
lib/client/: client.ml  dune
lib/command/: command.ml  dune
lib/config/: config.ml  dune
lib/core/: core.ml  database.ml  db.ml  dune  event.ml  event.mli  event_store.ml  protocol.ml  space.ml  state.ml
lib/core/auth/: auth.ml  auth.mli  dune  handlers.ml  handlers.mli  jwt.mli
lib/core/game/: dune  state.ml
lib/core/model/: dune  model.ml  model.mli  user.ml  user.mli
lib/core/server/: connection_manager.ml  dune  http_handlers.ml  http_handlers.mli  message_handler.ml  server.ml  state.mli  websocket.ml  websocket_handler.ml
lib/db/: db.ml  dune
lib/domain/: area.mli  character.ml  character.mli  client.ml  communication.ml  communication.mli  components.ml  connection_manager.ml  dispatcher.ml  dispatcher.mli  domain.ml  dune  ecs.ml  ecs.mli  event.ml  handlers.ml  legacy_processor.ml  loop.ml  protocol.ml  publisher.ml  qed_error.ml  queue.ml  queue.mli  scheduler.ml  scheduler.mli  simple_event_publisher.ml  state.ml  state.mli  system.ml  system.mli  types.ml  types.mli  user.ml  user.mli  utils.ml  world_gen.ml  world_gen_llm.ml  world_gen_llm.mli
lib/domain/actions/: area_actions.ml  area_actions.mli  character_actions.ml  character_actions.mli  item_actions.ml  item_actions.mli
lib/domain/client_handlers/: area_handler.ml  character_handler.ml  client_handler.ml  communication_handler.ml  frame_handler.ml  status_handler.ml  world_handler.ml
lib/domain/components/: bonus_stats_component.ml  equipment_component.ml
lib/domain/config/: game_balance.mli
lib/domain/frames/: frame.ml  status_frame.ml
lib/domain/models/: archetype.ml  archetype.mli  area.ml  area.mli  character.ml  character.mli  communication.ml  communication.mli  exit.ml  exit.mli  item_definition.ml  item_definition.mli  lore_card.ml  lore_card.mli  npc.ml  npc.mli  seeding.ml  seeding.mli  user.ml  user.mli
lib/domain/systems/: account_system.ml  ap_regen_system.ml  area_loading_system.ml  area_management_system.ml  area_system.ml  award_lore_card_system.ml  bonus_stat_recalculation_system.ml  bonus_stat_recalculation_system.mli  character_activation_system.ml  character_loading_system.ml  character_sheet_system.ml  character_stat_system.ml  character_system.ml  character_unloading_system.ml  communication_system.ml  entity_cleanup_system.ml  equipment_system.ml  equipment_update_system.ml  experience_system.ml  initialization_system.ml  item_system.ml  knockout_system.ml  manage_loadout_system.ml  metrics_system.ml  movement_system.ml  npc_action_system.ml  npc_decision_system.ml  npc_spawning_system.ml  presence_system.ml  progression_system.ml  recovery_system.ml  request_lore_collection_system.ml  seeding_system.ml  send_lore_card_awarded_system.ml  stat_recalculation_system.ml
lib/game/: command.ml  dune  game.ml  loop.ml  state.ml
lib/infra/: config.ml  database.ml  dune  infra.ml  llm_client.ml  monitoring.mli  queue.ml  queue.mli
lib/llm/: client.ml  dune  http_client.ml  provider.mli  rate_limit.ml  retry_utils.ml  token_utils.ml  types.ml
lib/llm/providers/: anthropic.ml  deepseek.ml  openai.ml
lib/model/: character.ml  dune  user.ml  user.mli
lib/protocol/: dune  message.ml  message.mli
lib/qed_config/: dune  qed_config.ml
lib/qed_error/: dune  qed_error.ml
lib/schemas_generated/: dune  input.ml  output.ml  output.mli
lib/server/: client.ml  connection_manager.ml  dune  http_handlers.ml  http_handlers.mli  jwt.ml  message_handler.ml  message_handlers.ml  server.ml  state.ml  websocket.ml  websocket.mli  websocket_handler.ml
lib/state/: dune
lib/util/: dune
schemas/: ai_comms.proto  input.mli  input.proto  output.proto
simulator/: analysis.py  config.py  main.py  player.py
src/: agent.ml  dune  social.ml  types.ml  world.ml
test/: dune  test_event.ml  test_seeding.ml
tools/simulator/: analysis.py  player.py  simulation.py
website/: package-lock.json  package.json
(+144 files in other folders)
