(lang dune 3.0)
(name chronos)

(package
 (name chronos)
 (allow_empty)
 (synopsis "Chronos Engine - Eio-based game engine for Dark Grimoire")
 (depends
  (ocaml (>= 5.0.0))
  (dune (>= 3.0.0))
  (base (>= v0.17.0))
  (eio (>= 1.0))
  (eio_main (>= 1.0))
  (ppx_let (>= v0.17.0))
  (digestif (>= 0.8.0))
  (ptime (>= 0.8.0))
  (caqti (>= 2.0))
  (caqti-eio (>= 2.0))
  (caqti-driver-postgresql (>= 2.0))
  (caqti-driver-sqlite3 (>= 2.0))
  (uri (>= 4.0))
  (uuidm (>= 0.9.0))
  (pbrt (>= 3.0))
  (ocaml-protoc (>= 3.0))
  (alcotest (and (>= 1.7.0) :with-test))))
