(library
 (name qed_labyrinth)
 (public_name qed_labyrinth)
 (libraries
  base
  yojson
  ppx_deriving_yojson.runtime
  ppx_deriving.runtime
  digestif
  ptime
  ptime.clock
  lwt
  caqti
  caqti-lwt
  lwt.unix
  caqti-lwt.unix
  caqti-driver-sqlite3
  uri
  uuidm
  unix
  qed_labyrinth.schemas_generated)
 (preprocess (pps ppx_let ppx_deriving_yojson))
 (modules :standard))
