(library
 (name infra)
 (public_name qed_labyrinth.infra)
 (libraries
  base
  yojson
  ppx_deriving_yojson.runtime
  ppx_deriving.runtime
  qed_labyrinth.llm
  digestif
  ptime
  ptime.clock
  lwt
  caqti
  caqti-lwt
  lwt.unix
  caqti-lwt.unix
  caqti-driver-sqlite3
  uri
  uuidm
  unix
  redis-lwt)
 (preprocess
  (pps
   ppx_jane
   ppx_let
   lwt_ppx
   ppx_deriving.show
   ppx_deriving_yojson)))
