(library
 (name qed_labyrinth_core)
 (public_name qed_labyrinth.core)
 (libraries
  base
  yojson
  ppx_deriving_yojson.runtime
  ppx_deriving.runtime
  digestif
  jose
  ptime
  ptime.clock
  dream
  lwt
  caqti
  caqti-lwt
  lwt.unix
  caqti-lwt.unix
  caqti-driver-postgresql
  uri
  uuidm
  unix)
 (preprocess
  (pps
   ppx_jane
   ppx_let
   lwt_ppx
   ppx_deriving.show
   ppx_deriving_yojson)))
