(library
 (name infra)
 (public_name qed_labyrinth.infra)
 (libraries
  base
  yojson
  ppx_deriving_yojson.runtime
  ppx_deriving.runtime
  qed_labyrinth.llm
  digestif
  jose
  ptime
  ptime.clock
  dream
  lwt
  caqti
  caqti-lwt
  lwt.unix
  caqti-lwt.unix
  caqti-driver-sqlite3
  uri
  uuidm
  unix)
 (preprocess
  (pps
   ppx_jane
   ppx_let
   lwt_ppx
   ppx_deriving.show
   ppx_deriving_yojson)))
